--- a/styles/ongs-listaStyle.css
+++ b/styles/ongs-listaStyle.css
@@ -235,6 +235,11 @@ body {
 
 }
 
+#ong-name-search::placeholder{
+    position: absolute;
+    left: 7px;
+}
+
 .cards-ong{
     background-color: #D9D9D9;
     cursor: pointer;
