--- a/styles/ongs-listaStyle.css
+++ b/styles/ongs-listaStyle.css
@@ -211,6 +211,10 @@ body {
     background-color: #D9D9D9;
 }
 
+#filter-itens > li{
+    display: inline;
+}
+
 #container{
     background-color: #ffffff;
     border-radius: 10px;
@@ -309,6 +313,17 @@ CHEGAR EM 1558PX */
         width: 780px !important;        
     }
         
+}
+
+@media(max-width: 850px){
+    #filter-itens{
+        display: block;
+        
+    }
+
+    #container-filter-itens{
+        height: 10rem;
+    }
 }
 
 @media(max-width: 805px){
